Fix alignment

--- a/SCSS/Modern Scrollable Code Block.scss
+++ b/SCSS/Modern Scrollable Code Block.scss
@@ -125,7 +125,6 @@
                     font-size: 14px !important;
                     position: relative;
                     top: -4px;
-                    left: -10px;
                 }
         }
 // Language Converter
